kubernetes-networking/services.yml
apiVersion: v1
kind: Service
metadata:
  name: contoso-web
spec:
  type: ClusterIP
  selector:
    app: contoso-web
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
